--- a/css/style.css
+++ b/css/style.css
@@ -454,7 +454,19 @@ header{
     padding: .5em;
 }
 
+/* individual portfolio item styles */
 
+.portfolio-item-individuals{
+    padding: 0 2em 2em;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.portfolio-item-individuals{
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 
