--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ header{
 
 .nav{
     position: fixed;
-    background: var(--clr-accent); /*change this color*/
+    background: var(--clr-dark); /*change this color*/
     color: var(--clr-light);
     top: 0;
     bottom: 0;
